--- a/backup_files.properties
+++ b/backup_files.properties
@@ -1,4 +1,5 @@
 #Backup Files
-#Sat Mar 08 23:19:18 ICT 2025
+#Sat Mar 08 23:41:23 ICT 2025
 1=Version1-product-backup-2025-03-08.sql
 2=Version2-product-backup-2025-03-08.sql
+3=Version3-product-backup-2025-03-08.sql
