--- a/backup_files.properties
+++ b/backup_files.properties
@@ -1,4 +1,6 @@
 #Backup Files
-#Sat Mar 08 23:19:18 ICT 2025
+#Sun Mar 09 08:59:13 ICT 2025
 1=Version1-product-backup-2025-03-08.sql
 2=Version2-product-backup-2025-03-08.sql
+3=Version3-product-backup-2025-03-09.sql
+4=Version4-product-backup-2025-03-09.sql
